<resources>
    <!-- App_Name -->
    <string name="app_name">VieFUND</string>
    <!-- END App_Name -->
    <string name="username">Username/Nom d\'utilisateur</string>
    <string name="password">Password/Mot de passe</string>
    <string name="login">Login/Connexion</string>
    <string name="forgetPwd">Forget Password </string>
    <string name="signin">Signin </string>
    <string name="action_logout">Sign out</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="changelanguage">Change Language</string>
    <string name="loading_data" translatable="false">Loading data ...</string>

    <!-- TEST -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="prefs_theme_key" translatable="false">theme</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_group">Option</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_notifications_info">Notification Info</string>
    <string name="nav_notifications_reply">Reply</string>
    <string name="nav_transaction_detail">Transaction Detail</string>
    <string name="nav_plan_account">"Investment "</string>
    <string name="nav_assett_chart">Asset Chart</string>
    <string name="nav_plan_asset">"Plan Assets "</string>

    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_change_theme">Change Theme</string>

    <!--Bổ Sung-->
    <string name="empty_username">Please enter username and password</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all" translatable="false">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="switch_button_title">Quick Access</string>

    <!--change language-->
    <string name="change_language_title">Change Language</string>
    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_french" translatable="false">français</string>

    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_french</item>
    </string-array>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_french_code" translatable="false">fr</string>
    <string name="gic_details">GIC Account</string>
    <string name="cash_transactions">"Transactions "</string>
    <string name="acc_info">AccountInfo</string>
    <string name="fund_price">FundPrice</string>
    <string name="inbox">Inbox</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="plan_info_details">Plan Info Details</string>
    <string name="quick_access">Quick Access</string>

    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_french_code</item>
    </string-array>
    <string name="Account_Details">Account Details</string>
    <string name="Trades">Trades</string>
    <string name="Account">Account</string>
    <string name="Prices">Prices</string>
    <string name="Asset_Class">Asset Class</string>
    <string name="Value">Value</string>
    <string name="Cash_Account">Cash Account</string>
    <string name="Details">Details</string>
    <string name="GIC_Account">GIC Account</string>
    <string name="amount">Amount</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_disclosure">Disclosure</string>
    <string name="setting_termofuse">Terms Of Use</string>
    <string name="setting_help">Help</string>
    <string name="new_message">New Message</string>
    <string name="remember_me">Remember me</string>
    <string name="la_mess_subject">Subject</string>
    <string name="la_mess_content">Content</string>
    <string name="la_mess_from">From</string>
    <string name="la_mess_to">To</string>
    <string name="la_mess_title" translatable="false">Re</string>
    <string name="la_mess_time">Time</string>
    <string name="la_mess_sent">Sent</string>
    <string name="la_mess_noti">Notification</string>

</resources>
